--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
   "scripts": {
     "dev": "ng serve",
     "build": "ng build",
-    "preview": "ng serve --configuration=production"
+    "preview": "ng serve --configuration=production",
+    "deploy": "ng build --base-href /Pylingo/ && npx angular-cli-ghpages --dir=dist"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/core": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/common": "^20.3.0",
-    "@angular/forms": "^20.3.7",
-    "@angular/platform-browser": "^20.3.0",
     "@angular/build": "^20.3.0",
     "@angular/cli": "^20.3.0",
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
     "@angular/compiler-cli": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.3.7",
+    "@angular/platform-browser": "^20.3.0",
+    "rxjs": "^7.8.2",
     "tailwindcss": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "angular-cli-ghpages": "^2.0.3",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
